--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "is-pwa",
   "version": "0.0.0",
-  "description": "My fantabulous module",
+  "description": "Checks if a given URL is a PWA.",
   "license": "MIT",
   "repository": "hemanth/is-pwa",
   "author": {
@@ -11,10 +11,9 @@
   },
   "bin": "cli.js",
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=5"
   },
   "scripts": {
-    "test": "xo && ava",
     "lunch-chrome": "./node_modules/lighthouse/lighthouse-core/scripts/launch-chrome.sh"
   },
   "files": [
@@ -24,16 +23,16 @@
   "keywords": [
     "cli-app",
     "cli",
-    ""
+    "is-pwa",
+    "pwa",
+    "progressivewebapp",
+    "check",
+    "test"
   ],
   "dependencies": {
-    "cross-spawn": "^4.0.0",
     "is-url": "^1.2.2",
     "lighthouse": "^1.1.2",
     "meow": "^3.7.0"
   },
-  "devDependencies": {
-    "ava": "^0.12.0",
-    "xo": "^0.12.1"
-  }
+  "devDependencies": {}
 }
